--- a/admin_dashboard.xhtml
+++ b/admin_dashboard.xhtml
@@ -24,7 +24,7 @@
             <div class="menu_simple">
                 <ul>
                     <li><a href="" id="">SERVICES</a></li>
-                    <li><a href="" id="">RENTALS</a></li>
+                    <li><a class="rentals_active" href="" id="">RENTALS</a></li>
                 </ul>
                 <br/>
             </div>
@@ -34,7 +34,8 @@
                         <th style="width: 15%">SKU</th>
                         <th style="width: 60%">Product Name</th> 
                         <th style="width: 20%">Quantity</th>
-                        <th style="width: 10%">Price</th> 
+                        <th style="width: 10%">Price</th>
+                        <th style="width: 10%"></th> 
                     </tr>
                 </thead>
                 <tbody id="productlist">
@@ -67,10 +68,6 @@
                         </bodyReplace>
                     </div>
 
-                    <div class="six columns">
-                        <bodyReplace metal:use-macro="./templates/admin_dashboard.xhtml/admin_dashboard_profile">
-                        </bodyReplace>
-                    </div>
                 </div>
             </div>
           
