--- a/admin_dashboard.xhtml
+++ b/admin_dashboard.xhtml
@@ -203,7 +203,7 @@
                 //var firstName = $(this).val(
                 productValue = productValue.replace("u-", "");
                 var editedTitle = $(this).parent().parent().find(".title span").text();
-                var editedQty = $(this).parent().parent().find(".qty span").text();
+                var editedQty = $(this).parent().parent().find(".qty span").text(); //still need wroks
                 //console.log(loginValue, editedFirstName);
 
                 $.ajax({
@@ -213,7 +213,7 @@
                     data: {action: "update", SKU: productValue, newTitle: editedTitle, newQty: editedQty},
                     success: function(returnedData) {
                        adminloadProducts();
-
+                        alert("product Updated!");
                         //window.location.href = "user-editor.html";
                     },
                     error: function(jqXHR, textStatus, errorThrown) {
