--- a/admin_dashboard.xhtml
+++ b/admin_dashboard.xhtml
@@ -178,6 +178,12 @@
                     var $input = $td.find('input');
                     $input.focus();
                     $input.select();
+                } else if($td.attr('class') === 'price') {
+                    //var val = $(this).html();
+                    $td.html('<input type="text" value="' + val + '"/>');
+                    var $input = $td.find('input');
+                    $input.focus();
+                    $input.select();
                 }
 
                 if($input != null) {
@@ -203,14 +209,15 @@
                 //var firstName = $(this).val(
                 productValue = productValue.replace("u-", "");
                 var editedTitle = $(this).parent().parent().find(".title span").text();
-                var editedQty = $(this).parent().parent().find(".qty span").text(); //still need wroks
-                //console.log(loginValue, editedFirstName);
+                var editedQty = $(this).parent().parent().find(".qty span").text();
+                var editedPrice = $(this).parent().parent().find(".price span").text();
+                    console.log(productValue, editedTitle, editedQty, editedPrice);
 
                 $.ajax({
                     url: "./admin_products.php",
                     type: "POST",
                     dataType: 'json',
-                    data: {action: "update", SKU: productValue, newTitle: editedTitle, newQty: editedQty},
+                    data: {action: "update", SKU: productValue, newTitle: editedTitle, newQty: editedQty, newPrice: editedPrice},
                     success: function(returnedData) {
                        adminloadProducts();
                         alert("product Updated!");
