--- a/shopping_cart.xhtml
+++ b/shopping_cart.xhtml
@@ -71,7 +71,7 @@
                     </div>
                     
                     <div class="two columns">
-                        <button class="add_button">CHECKOUT</button>
+                        <button class="add_button">CHECKOUT YOU SLUTS </button>
                     </div>
                 </div>
         
