--- a/shopping_cart.xhtml
+++ b/shopping_cart.xhtml
@@ -70,7 +70,7 @@
                         <button id="cancelCart" class="remove_button">CANCEL</button>
                     </div>
                     
-                    <div class="two columns">
+                    <div class="two columns">-
                         <button class="add_button">CHECKOUT YOU SLUTS </button>
                     </div>
                 </div>
