--- a/rentals.xhtml
+++ b/rentals.xhtml
@@ -67,6 +67,7 @@
         
             //WORK IN PROGRESS
             $('#productlist').on('click', 'input[data-sku-add]', function() {
+                alert("Weee");
                 //console.log(this.getAttribute("data-sku-add"));
 /*
                 // get the sku
