--- a/admin_dashboard.xhtml
+++ b/admin_dashboard.xhtml
@@ -14,6 +14,7 @@
     <section class="divider_01" >
         <div class="row">
             <div class="twelve columns">
+            <!-- YOU ALL SUCK HAHAHAHAHAHAAHAHAH -->
                 <h2>ADMIN DASHBOARD</h2>
             </div>
         </div>
