--- a/rentals.xhtml
+++ b/rentals.xhtml
@@ -49,7 +49,7 @@
     $(document).ready(function() {
                 function adminloadProducts() {
                 $.ajax({
-                    url: "admin_products.php",
+                    url: "rentals_products.php",
                     type: "GET",
                     dataType: 'html',
                     success: function(returnedData) {
