--- a/rentals.xhtml
+++ b/rentals.xhtml
@@ -18,11 +18,10 @@
             <table id="products">
                 <thead>
                     <tr>
-                        <th style="width: 10%">SKU</th>
-                        <th style="width: 50%">Product Name</th> 
+                        <th style="width: 20%">Title</th>
+                        <th style="width: 50%">Description</th> 
                         <th style="width: 10%">Quantity</th>
                         <th style="width: 10%">Price</th>
-                        <th style="width: 10%"></th>
                         <th style="width: 10%"></th>
                     </tr>
                 </thead>
