--- a/shopping_cart.xhtml
+++ b/shopping_cart.xhtml
@@ -70,8 +70,8 @@
                         <button id="cancelCart" class="remove_button">CANCEL</button>
                     </div>
                     
-                    <div class="two columns">-
-                        <button class="add_button">CHECKOUT YOU SLUTS </button>
+                    <div class="two columns">
+                        <button class="add_button">CHECKOUT</button>
                     </div>
                 </div>
         
