updated start cart button to only display when no cart

--- a/rentals.xhtml
+++ b/rentals.xhtml
@@ -11,8 +11,13 @@
     </navReplace>
   
    
-    <section class="divider_01" >
-
+    <section class="divider_01" > 
+            <div class="row">
+                <div class="twelve columns">
+                    <h2>RENTALS</h2>
+                </div>
+            </div>
+ 
         <div class="row">
 
             <table id="products">
