--- a/rentals.xhtml
+++ b/rentals.xhtml
@@ -52,6 +52,8 @@
       <script>
     $(document).ready(function() {
         //<![CDATA[
+		
+			$("#rentals_but").css({ "background-color": "#CC675B", "color": "#ffffff" });
             // FOR PUTTING OBJECTS INTO HTML5 WEB STORAGE - ADD METHODS TO THE STORAGE OBJECT
             // http://stackoverflow.com/questions/2010892/storing-objects-in-html5-localstorage
             Storage.prototype.setObject = function(key, value) {
